--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "exceljs": "^4.4.0",
+    "json2csv": "6.0.0-alpha.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "qrcode": "^1.5.3",
